# aind-disrnn-wrapper

./: .gitignore  AGENTS.md  README.md  ai2_migrate_plan.md  pyproject.toml  resume_heldout_beaker.py
.claude/: settings.json
.codeocean/: datasets.json  secrets.json
beaker/: BUILD_LOG.md  Dockerfile  HANDOFF.md  README.md  build_and_push.sh  entrypoint.sh  experiment_mvp.yaml  pack_gpu.sh  postInstall  smoke.yaml  sweep_mvp.yaml
code/: EVALUATION.md  POST_TRAINING_ANALYSIS.md  TRAINING.md  TaskTrainedRNNData-logs_BlockBandit2ArmCoupledEasy-v1-noisy_rl2_10__16:07_13:48:09.pkl  TaskTrainedRNNData-logs_RandomWalkDF-v0-noisy_rl2_10__28:09_01:45:33.pkl  TaskTrainedRNNData-logs_combined_block_rw.pkl  __init__.py  inspect_mice_data.ipynb  launch_wandb_sweep.py  load_mice_data.py  play-data_loading_database.ipynb  play-load_mice_data.ipynb  play-mice_model.ipynb  play.ipynb  resolved_run.json  resume_heldout.py  resume_heldout_beaker.py  run  run_analysis.py  run_capsule-test-detailed_ana_on_generative_runs.py  run_capsule-test.py  run_capsule-test_baseline_rl.py  run_capsule-test_embedding_analysis.py  run_capsule-test_fine_tuning.py  run_capsule-test_likelihood_advantage_analysis.py  run_capsule-test_likelihood_comparison.py  run_capsule.py  run_embedding_space_analysis.py  run_eval.py  run_heldout_subject_finetuning.py  run_hpc.py  session_metrics.pkl  training_runner.py
config/: config.yaml
environment/: Dockerfile  postInstall  postinstall
job/: disrnn_hydra.slurm  disrnn_wandb_agent.slurm  hydra_multirun_cpu.slurm  hydra_multirun_gpu.slurm  user.env.example  (+5 more)
(+145 files in other folders)
